<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    tools:context=".settings.SettingsCommunicationActivity">

    <ScrollView style="@style/LayoutMatchWrap">
        <LinearLayout style="@style/LayoutMatchWrap">
            <androidx.cardview.widget.CardView style="@style/DataCard">
                <LinearLayout style="@style/DataCardInnerLayout.Settings">

                    <LinearLayout style="@style/LayoutMatchWrap" android:orientation="horizontal">
                        <com.google.android.material.textview.MaterialTextView
                            style="@style/AppTextView.Settings.Title"
                            android:layout_width="0dp"
                            android:layout_weight="0.5"
                            android:text="@string/button_label"/>

                        <com.google.android.material.textview.MaterialTextView
                            style="@style/AppTextView.Settings.Title"
                            android:layout_width="0dp"
                            android:layout_weight="1.0"
                            android:text="@string/command"/>
                    </LinearLayout>

                    <LinearLayout style="@style/LayoutMatchWrap.MarginTop" android:orientation="horizontal">
                        <EditText
                            style="?attr/appEditText"
                            android:id="@+id/f1LabelEditText"
                            android:hint="@string/f1_default"
                            android:layout_weight="0.5"
                            android:layout_marginEnd="@dimen/screen_padding"
                            android:inputType="text"
                            android:importantForAutofill="no" />

                        <EditText
                            style="?attr/appEditText"
                            android:id="@+id/f1CommandEditText"
                            android:hint="@string/f1_default"
                            android:layout_weight="1.0"
                            android:inputType="text"
                            android:importantForAutofill="no" />
                    </LinearLayout>

                    <LinearLayout style="@style/LayoutMatchWrap.MarginTop" android:orientation="horizontal">
                        <EditText
                            style="?attr/appEditText"
                            android:id="@+id/f2LabelEditText"
                            android:hint="@string/f2_default"
                            android:layout_weight="0.5"
                            android:layout_marginEnd="@dimen/screen_padding"
                            android:inputType="text"
                            android:importantForAutofill="no" />

                        <EditText
                            style="?attr/appEditText"
                            android:id="@+id/f2CommandEditText"
                            android:hint="@string/f2_default"
                            android:layout_weight="1.0"
                            android:inputType="text"
                            android:importantForAutofill="no" />
                    </LinearLayout>

                    <com.google.android.material.button.MaterialButton
                        style="@style/UIButton.Settings"
                        android:id="@+id/restoreCustom"
                        android:text="@string/restore_defaults" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <View
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="@dimen/screen_padding"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
